--- a/pyproject.toml
+++ b/pyproject.toml
@@ -40,7 +40,7 @@ dependencies = [
     "scipy",
     "torch>=2.5.0,<2.8.0",
     "torchvision",
-    "transformers>=4.53.1,<4.54.0",
+    "transformers>=4.51.1,<4.52.0"
 ]
 
 [project.optional-dependencies]
