--- a/.gitignore
+++ b/.gitignore
@@ -171,3 +171,7 @@ cython_debug/
 #  option (not recommended) you can uncomment the following to ignore the entire idea folder.
 #.idea/
 *.ipynb
+output
+runs
+evals
+wandb
